jlinkで出力
アプリのモジュール化は断念しjava.desktop入りJREのみjlinkで作成し、shadowJarでまとめたJarを実行するようにした